// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code renders given text without crashing 1`] = `
"<!-- wp:code -->
<pre class="wp-block-code"><code>Sample text</code></pre>
<!-- /wp:code -->"
`;

exports[`Code renders without crashing 1`] = `
"<!-- wp:code -->
<pre class="wp-block-code"><code></code></pre>
<!-- /wp:code -->"
`;
